apps/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - mealie.home.bstjohn.net
        - mealie.ext.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: mealie.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
    - host: mealie.ext.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
